--- a/style.css
+++ b/style.css
@@ -4,6 +4,39 @@ body {
 
 #main {
     margin: 10px 20px;
+    display: flex;
+    align-items: flex-start;
+    gap: 20px;
+}
+
+#legend {
+    border: 1px solid #000;
+    padding-right: 10px;
+    padding-top: 10;
+    padding-bottom: 3px;
+}
+
+#legend h3 {
+    margin: 0;
+}
+
+.legend-item {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+.legend-text {
+    margin-left: 5px;
+}
+
+.legend-circle {
+    width: 15px;
+    height: 15px;
+    margin-left: 5px;
+    border: 1px solid #000;
+    border-radius: 50%;
 }
 
 text.label {
